--- a/force-app/main/default/lwc/wizardStep1/wizardStep1.html
+++ b/force-app/main/default/lwc/wizardStep1/wizardStep1.html
@@ -24,6 +24,21 @@
                 class="slds-m-bottom_medium">
             </lightning-textarea>
 
+            <!-- Is Active Checkbox -->
+            <lightning-input
+                type="checkbox"
+                label="Is Active"
+                name="isActive"
+                checked={isActive}
+                onchange={handleInputChange}
+                class="slds-m-bottom_medium">
+            </lightning-input>
+            <div class="slds-m-top_x-small slds-m-bottom_medium">
+                <p class="slds-text-body_small slds-text-color_weak">
+                    Active rules will be processed by automation. Inactive rules are ignored.
+                </p>
+            </div>
+
             <!-- Error Message -->
             <template if:true={errorMessage}>
                 <div class="slds-m-top_medium">
